OC3 = OpenCart 3
PS  = PrestaShop (1.7.6+) (1.6- wordt niet meer ondersteund sinds 6.0.0)
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress) (wordt niet meer ondersteund sinds 5.5.2)
WC3 = WooCommerce 3 (WordPress)
WC4 = WooCommerce 4 (WordPress)

6.3.1 (2021-07-??)
------------------
- HS: Revisit/improve commit 2021-01-26 (6.2.0): HS 4+ has a setting on shipping
  methods "Automatic taxes"/"Automatische belastingen" that determines [...].
  Improvement: property taxes is not always defined, handle that case as well.
- WC: Error in commit of 2021-06-20 (6.3.0) that tried to solve a problem with
  rounded tax amounts in WC.
- ALL: Typos and unescaped %-sign in message (about EU limit) that gets passed
  through sprintf().

6.3.0 (2021-06-29)
------------------
Features:
- ALL: Changed the settings under "About your shop":
  * For the fields related to the different tax classes (foreign vat, vat free,
    0 vat) there is now just 1 (drop down) setting instead of the former radio
    button + dropdown. A "Not applicable" value has been added to the drop down.
  * Labels and descriptions for the foreign vat classes has been changed to
    reflect the new rules regarding international sales in the EU that apply as
    of 1 july 2021.
- ALL: Added the ReportThresholdEuCommerce API call to AcumulusClient. It is
  used in the "About Acumulus" block to give you insight into your EU sales
  relative to the threshold.
- ALL: Added the setting 'Percentage EU Omzetdrempel' to 'Uw factuurinstellingen'
  on the advanced settings form. This feature checks your invoices against the
  new EU Commerce threshold above which you should use foreign vat.
- ALL: Added the field vattypeid to the InvoiceAdd API call.

Bugs:
- OC: Update functions were not executed as a call to install(), executed before
  update(), already increased the "data model" version to the new version.